adição da opção de adicionar imagem

--- a/Multas-tB/Multas-tB/Views/Agentes/Index.cshtml
+++ b/Multas-tB/Multas-tB/Views/Agentes/Index.cshtml
@@ -1,45 +1,48 @@
 ﻿@model IEnumerable<Multas_tB.Models.Agentes>
 
 @{
-    ViewBag.Title = "Index";
+   ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+   @Html.ActionLink("Criar Novo Agente", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Esquadra)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fotografia)
-        </th>
-        <th></th>
-    </tr>
+   <tr>
+      <th>
+         @Html.DisplayNameFor(model => model.Nome) @* model => model.Nome ----> expressão Labda*@
+      </th>
+      <th>
+         @Html.DisplayNameFor(model => model.Esquadra)
+      </th>
+      <th>
+         @Html.DisplayNameFor(model => model.Fotografia)
+      </th>
+      <th></th>
+   </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
+   @foreach(var item in Model) {
+      <tr>
+         <td>
             @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
+         </td>
+         <td>
             @Html.DisplayFor(modelItem => item.Esquadra)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fotografia)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+         </td>
+         <td>
+            @*@Html.DisplayFor(modelItem => item.Fotografia)*@
+            <a href="~/imagens/@item.Fotografia" target="_blank">
+               <img src="~/imagens/@item.Fotografia" width="50" height="37" />
+            </a>
+         </td>
+         <td>
+            @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
+            @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
+            @Html.ActionLink("Apagar", "Delete", new { id = item.ID })
+         </td>
+      </tr>
+   }
 
 </table>
