--- a/Multas-tB/Multas-tB/Views/Agentes/Edit.cshtml
+++ b/Multas-tB/Multas-tB/Views/Agentes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Multas_tB.Models.Agentes
 
 @{
-   ViewBag.Title = "Edit";
+   ViewBag.Title = "Agentes";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 
 @*
@@ -54,9 +54,15 @@
          @Html.LabelFor(model => model.Fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
          <div class="col-md-10">
             @* com a adição da opção de efetuar upload de uma imagem, estes objetos não são mais necessários
-               @Html.EditorFor(model => model.Fotografia, new { htmlAttributes = new { @class = "form-control" } })
-               @Html.ValidationMessageFor(model => model.Fotografia, "", new { @class = "text-danger" })*@
+      @Html.EditorFor(model => model.Fotografia, new { htmlAttributes = new { @class = "form-control" } })
+      @Html.ValidationMessageFor(model => model.Fotografia, "", new { @class = "text-danger" })*@
 
+            @* Mostrar a imagem associada ao Agente *@
+            <a href="~/imagens/@Model.Fotografia" target="_blank">
+               <img src="~/imagens/@Model.Fotografia" height="150" />
+            </a>
+
+            @* procurar a nova imagem*@
             <input type="file" name="uploadFoto" style="color:blue;" accept=".jpg" />
 
          </div>
@@ -64,14 +70,14 @@
 
       <div class="form-group">
          <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Guardar" class="btn btn-default" />
          </div>
       </div>
    </div>
 }
 
 <div>
-   @Html.ActionLink("Back to List", "Index")
+   @Html.ActionLink("regressar ao início", "Index")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
