configuração das ferramentas de autenticação: - eliminar a referência ao namespace 'IdentitySample' - migrar a bd 'MultasDB' para a bd de autenticação

--- a/Multas-tB/Multas-tB/Views/Manage/ChangePassword.cshtml
+++ b/Multas-tB/Multas-tB/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.ChangePasswordViewModel
+﻿@model Multas_tB.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
