--- a/Multas-tB/Multas-tB/Views/Manage/Index.cshtml
+++ b/Multas-tB/Multas-tB/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.IndexViewModel
+﻿@model Multas_tB.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage your account";
 }
