--- a/Multas-tB/Multas-tB/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Multas-tB/Multas-tB/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.ExternalLoginConfirmationViewModel
+﻿@model Multas_tB.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
