--- a/Multas-tB/Multas-tB/Views/Account/ForgotPassword.cshtml
+++ b/Multas-tB/Multas-tB/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.ForgotPasswordViewModel
+﻿@model Multas_tB.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
