--- a/Multas-tB/Multas-tB/Views/Account/ResetPassword.cshtml
+++ b/Multas-tB/Multas-tB/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.ResetPasswordViewModel
+﻿@model Multas_tB.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
