--- a/Multas-tB/Multas-tB/Views/Account/SendCode.cshtml
+++ b/Multas-tB/Multas-tB/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.SendCodeViewModel
+﻿@model Multas_tB.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send Verification Code";
 }
