--- a/Multas-tB/Multas-tB/Views/Account/VerifyCode.cshtml
+++ b/Multas-tB/Multas-tB/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.VerifyCodeViewModel
+﻿@model Multas_tB.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Enter Verification Code";
 }
