--- a/Multas-tB/Multas-tB/Views/Manage/AddPhoneNumber.cshtml
+++ b/Multas-tB/Multas-tB/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.AddPhoneNumberViewModel
+﻿@model Multas_tB.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Add Phone Number";
 }
