--- a/Multas-tB/Multas-tB/Views/Manage/ManageLogins.cshtml
+++ b/Multas-tB/Multas-tB/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model IdentitySample.Models.ManageLoginsViewModel
+﻿@model Multas_tB.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
