--- a/Multas-tB/Multas-tB/Views/UsersAdmin/Index.cshtml
+++ b/Multas-tB/Multas-tB/Views/UsersAdmin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IdentitySample.Models.ApplicationUser>
+﻿@model IEnumerable<Multas_tB.Models.ApplicationUser>
 
 @{
     ViewBag.Title = "Index";
